2006-10-01  Bruno Haible  <bruno@clisp.org>

	Fix Perl parsing bug introduced between 0.14.6 and 0.15.
	* x-perl.c (extract_balanced): Add eat_delim and comma_delim arguments.
	Use recursion to handle the case of a keyword not followed by an
	opening parenthesis. When a keyword is seen, set next_argparser
	instead of modifying the argparser variable of the current recursion.
	When seeing an opening parenthesis, distinguish the case of function
	arguments and the case of a subexpression. Don't call collect_message
	for unused argument positions.
	Reported by Nicolas François <nicolas.francois@centraliens.net>.

	* x-perl.c (extract_balanced): Remove unused variable.

2006-09-06  Bruno Haible  <bruno@clisp.org>

	* msgl-iconv.c: Include xstriconv.h instead of iconvstring.h.
	(convert_string, convert_msgstr, iconvable_string, iconvable_msgstr):
	Use xmem_cd_iconv instead of iconv_string.
	* recode-sr-latin.c: Include xstriconv.h instead of iconvstring.h.
	(process): Use xmem_cd_iconv instead of iconv_string.

2006-09-04  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msginit_SOURCES): Add ../../gettext-runtime/intl/lock.c.
	Reported by Aaron Williams <aaron_williams@net.com>.

2006-08-28  Bruno Haible  <bruno@clisp.org>

	* x-scheme.c (read_object): Don't call arglist_parser_remember if
	argparser is NULL.
	* x-elisp.c (read_object): Likewise.
	* x-librep.c (read_object): Likewise.
	* x-lisp.c (read_object): Likewise.
	Reported by Kevin Ryde <user42@zip.com.au>.

2006-08-16  Bruno Haible  <bruno@clisp.org>

	* plural-table.c (plural_table): Put Hungarian under nplurals=2.
	Reported by Arpad Biro <biro_arpad@yahoo.com> and
	Gabor Kelemen <kelemeng@gnome.hu>.

2006-08-16  Bruno Haible  <bruno@clisp.org>

	* read-mo.c: Include stdbool.h, stdlib.h, format.h.
	(read_mo_file): Mark messages with system-dependent segments as
	"#, c-format" or "#, objc-format", as appropriate.
	Reported by Egmont Koblinger <egmont@uhulinux.hu>.

2006-08-07  Bruno Haible  <bruno@clisp.org>
